# RayclawPlus

./: .gitignore  .taurignore  README.md  README_CN.md  TODO.md  index.html  package.json  pnpm-lock.yaml
browser-runtime/: package.json
scripts/: prepare-agent-browser.mjs
src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  paths.rs  state.rs
src/components/: ChatWindow.tsx  CustomTitlebar.tsx  ErrorBoundary.tsx  MessageBubble.tsx  NotificationCenter.tsx  SettingsPage.tsx  SetupScreen.tsx  Sidebar.tsx  ToolStep.tsx
src/components/chat/: ChatComposer.tsx  ChatHeader.tsx  ChatSearchBar.tsx  ChatTimeline.tsx  chatTypes.ts  useAttachments.ts  useChatSearch.ts  useChatStreaming.ts  useSoulEditor.ts
src/hooks/: useGlobalShortcuts.ts
src/lib/: tauri-api.ts
src/store/: chatStore.ts  notificationStore.ts
