[package]
name = "rayclaw-desktop"
version = "0.1.0"
description = "RayClaw Desktop - AI Agent Runtime"
authors = ["RayClaw"]
edition = "2021"

[lib]
name = "rayclaw_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rayclaw = "0.1.6"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
teloxide = { version = "0.17", features = ["macros"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
